crates/biome_js_analyze/tests/specs/nursery/noPlaywrightElementHandle/invalid/dollar.js
const button = await page.$('button');

